Top facet alignment fix.

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -20,7 +20,8 @@ header .container.navbar { margin-bottom: 0; }
   margin-right: -.5rem;
 }
 .top-facets .facet,
-.top-facets .narrow-toggle {
+.top-facets .narrow-toggle,
+.top-facets > strong {
   display: inline-block;
   padding: .25rem .5rem;
   white-space: nowrap;
